--- a/ui/test.html
+++ b/ui/test.html
@@ -26,7 +26,7 @@
         <tbody>
           <tr>
             <td>Mandar</td>
-            <td><img src="bjp.png" alt=" "></td>
+            <td><img src="bjp.png" alt="bjp"></td>
             <td>vote</td>
           </tr>
           <tr>
